--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>To Do List</title>
+    <!-- <title>To Do List</title>
+    <button>Click Me</button> -->
   </head>
   <body>
     <div id="root"></div>
